--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "npm run build"
   },
   "author": "Kenji Morita <omajimedesign@google.com> (https://x.com/terrace_tech)",
@@ -27,7 +28,7 @@
   "homepage": "https://github.com/kenmori/corner-islands",
   "devDependencies": {
     "@types/jest": "29.5.12",
-    "jest": "29.7.0"
+    "vitest": "2.0.5"
   },
   "dependencies": {
     "typescript": "5.5.4"
